--- a/Project1/Project1_BernaYenidogan.ipynb
+++ b/Project1/Project1_BernaYenidogan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,22 +16,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 1: Find and download a dataset for supervised learning. \n",
+    "## Step 1: Find, load and explore the dataset for supervised learning. \n",
     "Loading ecommerce data from kaggle (https://www.kaggle.com/prachi13/customer-analytics)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "b'Skipping line 84: expected 1 fields, saw 2\\nSkipping line 103: expected 1 fields, saw 253\\nSkipping line 104: expected 1 fields, saw 2\\nSkipping line 119: expected 1 fields, saw 3\\nSkipping line 169: expected 1 fields, saw 3\\nSkipping line 188: expected 1 fields, saw 6\\nSkipping line 214: expected 1 fields, saw 4\\nSkipping line 218: expected 1 fields, saw 2\\nSkipping line 231: expected 1 fields, saw 2\\nSkipping line 232: expected 1 fields, saw 2\\nSkipping line 238: expected 1 fields, saw 2\\nSkipping line 241: expected 1 fields, saw 2\\nSkipping line 249: expected 1 fields, saw 4\\nSkipping line 255: expected 1 fields, saw 2\\nSkipping line 260: expected 1 fields, saw 2\\nSkipping line 261: expected 1 fields, saw 2\\nSkipping line 262: expected 1 fields, saw 2\\nSkipping line 263: expected 1 fields, saw 2\\nSkipping line 264: expected 1 fields, saw 2\\nSkipping line 270: expected 1 fields, saw 2\\nSkipping line 271: expected 1 fields, saw 2\\nSkipping line 272: expected 1 fields, saw 2\\nSkipping line 273: expected 1 fields, saw 2\\nSkipping line 280: expected 1 fields, saw 2\\nSkipping line 288: expected 1 fields, saw 4\\nSkipping line 293: expected 1 fields, saw 2\\nSkipping line 296: expected 1 fields, saw 2\\nSkipping line 297: expected 1 fields, saw 2\\nSkipping line 301: expected 1 fields, saw 2\\nSkipping line 321: expected 1 fields, saw 2\\nSkipping line 494: expected 1 fields, saw 6\\nSkipping line 495: expected 1 fields, saw 3\\nSkipping line 507: expected 1 fields, saw 6\\nSkipping line 508: expected 1 fields, saw 6\\nSkipping line 594: expected 1 fields, saw 6\\nSkipping line 603: expected 1 fields, saw 6\\nSkipping line 618: expected 1 fields, saw 6\\nSkipping line 638: expected 1 fields, saw 3\\nSkipping line 647: expected 1 fields, saw 3\\nSkipping line 656: expected 1 fields, saw 3\\nSkipping line 665: expected 1 fields, saw 3\\nSkipping line 674: expected 1 fields, saw 3\\nSkipping line 683: expected 1 fields, saw 3\\nSkipping line 692: expected 1 fields, saw 3\\nSkipping line 701: expected 1 fields, saw 3\\nSkipping line 950: expected 1 fields, saw 7\\nSkipping line 1006: expected 1 fields, saw 2\\nSkipping line 1100: expected 1 fields, saw 2\\nSkipping line 1103: expected 1 fields, saw 2\\nSkipping line 1135: expected 1 fields, saw 2\\nSkipping line 1137: expected 1 fields, saw 2\\nSkipping line 166210: expected 1 fields, saw 2\\nSkipping line 166211: expected 1 fields, saw 3\\nSkipping line 166212: expected 1 fields, saw 3\\nSkipping line 166213: expected 1 fields, saw 3\\nSkipping line 166214: expected 1 fields, saw 3\\nSkipping line 166215: expected 1 fields, saw 3\\nSkipping line 166224: expected 1 fields, saw 3\\nSkipping line 166225: expected 1 fields, saw 3\\nSkipping line 166226: expected 1 fields, saw 3\\nSkipping line 166227: expected 1 fields, saw 3\\nSkipping line 166228: expected 1 fields, saw 3\\nSkipping line 166229: expected 1 fields, saw 3\\n'\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -53,60 +46,364 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Warehouse_block</th>\n",
+       "      <th>Mode_of_Shipment</th>\n",
+       "      <th>Customer_care_calls</th>\n",
+       "      <th>Customer_rating</th>\n",
+       "      <th>Cost_of_the_Product</th>\n",
+       "      <th>Prior_purchases</th>\n",
+       "      <th>Product_importance</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Discount_offered</th>\n",
+       "      <th>Weight_in_gms</th>\n",
+       "      <th>ReachedonTime_YN</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>&lt;!DOCTYPE html&gt;</td>\n",
+       "      <td>1</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Flight</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>177</td>\n",
+       "      <td>3</td>\n",
+       "      <td>low</td>\n",
+       "      <td>F</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1233</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>&lt;html lang=\"en\" data-color-mode=\"auto\" data-li...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Flight</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>216</td>\n",
+       "      <td>2</td>\n",
+       "      <td>low</td>\n",
+       "      <td>M</td>\n",
+       "      <td>59</td>\n",
+       "      <td>3088</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>&lt;head&gt;</td>\n",
+       "      <td>3</td>\n",
+       "      <td>A</td>\n",
+       "      <td>Flight</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>183</td>\n",
+       "      <td>4</td>\n",
+       "      <td>low</td>\n",
+       "      <td>M</td>\n",
+       "      <td>48</td>\n",
+       "      <td>3374</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>&lt;meta charset=\"utf-8\"&gt;</td>\n",
+       "      <td>4</td>\n",
+       "      <td>B</td>\n",
+       "      <td>Flight</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>176</td>\n",
+       "      <td>4</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>M</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1177</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>&lt;link rel=\"dns-prefetch\" href=\"https://githu...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Flight</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>184</td>\n",
+       "      <td>3</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>F</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2484</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   0\n",
-       "0                                    <!DOCTYPE html>\n",
-       "1  <html lang=\"en\" data-color-mode=\"auto\" data-li...\n",
-       "2                                             <head>\n",
-       "3                             <meta charset=\"utf-8\">\n",
-       "4    <link rel=\"dns-prefetch\" href=\"https://githu..."
+       "   ID Warehouse_block Mode_of_Shipment  Customer_care_calls  Customer_rating  \\\n",
+       "0   1               D           Flight                    4                2   \n",
+       "1   2               F           Flight                    4                5   \n",
+       "2   3               A           Flight                    2                2   \n",
+       "3   4               B           Flight                    3                3   \n",
+       "4   5               C           Flight                    2                2   \n",
+       "\n",
+       "   Cost_of_the_Product  Prior_purchases Product_importance Gender  \\\n",
+       "0                  177                3                low      F   \n",
+       "1                  216                2                low      M   \n",
+       "2                  183                4                low      M   \n",
+       "3                  176                4             medium      M   \n",
+       "4                  184                3             medium      F   \n",
+       "\n",
+       "   Discount_offered  Weight_in_gms  ReachedonTime_YN  \n",
+       "0                44           1233                 1  \n",
+       "1                59           3088                 1  \n",
+       "2                48           3374                 1  \n",
+       "3                10           1177                 1  \n",
+       "4                46           2484                 1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "folder = \"https://github.com/beyenidogan/AdvData/blob/main/Project1/\"\n",
+    "folder = \"https://raw.githubusercontent.com/beyenidogan/AdvData/main/Project1/\"\n",
     "file_name=\"ecommerce_shipping.csv\"\n",
-    "#file_url=folder+file_name\n",
-    "file_url=\"https://github.com/beyenidogan/AdvData/blob/main/Project1/ecommerce_shipping.csv\"\n",
+    "file_url=folder+file_name\n",
     "\n",
-    "#def load_shipping_data(path=file_url): \n",
-    "#    return pd.read_csv(path)\n",
     "\n",
-    "shipping = pd.read_csv(file_url,error_bad_lines=False,header=None)\n",
+    "def load_shipping_data(path=file_url): \n",
+    "    return pd.read_csv(path)\n",
+    "\n",
+    "shipping = pd.read_csv(file_url,error_bad_lines=False)\n",
     "\n",
     "shipping.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10999, 12)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shipping.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10999 entries, 0 to 10998\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   ID                   10999 non-null  int64 \n",
+      " 1   Warehouse_block      10999 non-null  object\n",
+      " 2   Mode_of_Shipment     10999 non-null  object\n",
+      " 3   Customer_care_calls  10999 non-null  int64 \n",
+      " 4   Customer_rating      10999 non-null  int64 \n",
+      " 5   Cost_of_the_Product  10999 non-null  int64 \n",
+      " 6   Prior_purchases      10999 non-null  int64 \n",
+      " 7   Product_importance   10999 non-null  object\n",
+      " 8   Gender               10999 non-null  object\n",
+      " 9   Discount_offered     10999 non-null  int64 \n",
+      " 10  Weight_in_gms        10999 non-null  int64 \n",
+      " 11  ReachedonTime_YN     10999 non-null  int64 \n",
+      "dtypes: int64(8), object(4)\n",
+      "memory usage: 1.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "shipping.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Customer_care_calls</th>\n",
+       "      <th>Customer_rating</th>\n",
+       "      <th>Cost_of_the_Product</th>\n",
+       "      <th>Prior_purchases</th>\n",
+       "      <th>Discount_offered</th>\n",
+       "      <th>Weight_in_gms</th>\n",
+       "      <th>ReachedonTime_YN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10999.00000</td>\n",
+       "      <td>10999.000000</td>\n",
+       "      <td>10999.000000</td>\n",
+       "      <td>10999.000000</td>\n",
+       "      <td>10999.000000</td>\n",
+       "      <td>10999.000000</td>\n",
+       "      <td>10999.000000</td>\n",
+       "      <td>10999.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5500.00000</td>\n",
+       "      <td>4.054459</td>\n",
+       "      <td>2.990545</td>\n",
+       "      <td>210.196836</td>\n",
+       "      <td>3.567597</td>\n",
+       "      <td>13.373216</td>\n",
+       "      <td>3634.016729</td>\n",
+       "      <td>0.596691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3175.28214</td>\n",
+       "      <td>1.141490</td>\n",
+       "      <td>1.413603</td>\n",
+       "      <td>48.063272</td>\n",
+       "      <td>1.522860</td>\n",
+       "      <td>16.205527</td>\n",
+       "      <td>1635.377251</td>\n",
+       "      <td>0.490584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>96.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1001.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2750.50000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>169.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1839.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5500.00000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>214.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>4149.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>8249.50000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>251.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>5050.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>10999.00000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>310.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>7846.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ID  Customer_care_calls  Customer_rating  Cost_of_the_Product  \\\n",
+       "count  10999.00000         10999.000000     10999.000000         10999.000000   \n",
+       "mean    5500.00000             4.054459         2.990545           210.196836   \n",
+       "std     3175.28214             1.141490         1.413603            48.063272   \n",
+       "min        1.00000             2.000000         1.000000            96.000000   \n",
+       "25%     2750.50000             3.000000         2.000000           169.000000   \n",
+       "50%     5500.00000             4.000000         3.000000           214.000000   \n",
+       "75%     8249.50000             5.000000         4.000000           251.000000   \n",
+       "max    10999.00000             7.000000         5.000000           310.000000   \n",
+       "\n",
+       "       Prior_purchases  Discount_offered  Weight_in_gms  ReachedonTime_YN  \n",
+       "count     10999.000000      10999.000000   10999.000000      10999.000000  \n",
+       "mean          3.567597         13.373216    3634.016729          0.596691  \n",
+       "std           1.522860         16.205527    1635.377251          0.490584  \n",
+       "min           2.000000          1.000000    1001.000000          0.000000  \n",
+       "25%           3.000000          4.000000    1839.500000          0.000000  \n",
+       "50%           3.000000          7.000000    4149.000000          1.000000  \n",
+       "75%           4.000000         10.000000    5050.000000          1.000000  \n",
+       "max          10.000000         65.000000    7846.000000          1.000000  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shipping.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(data.gender.value_counts())"
    ]
   },
   {
