--- a/Project1/Project1_BernaYenidogan.ipynb
+++ b/Project1/Project1_BernaYenidogan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = \"https://raw.githubusercontent.com/beyenidogan/AdvData/main/Project1/\"\n",
+    "file_name=\"ecommerce_shipping.csv\"\n",
+    "file_url=folder+file_name\n",
+    "\n",
+    "shipping = pd.read_csv(file_url,error_bad_lines=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -163,22 +176,12 @@
        "4                46           2484                 1  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "folder = \"https://raw.githubusercontent.com/beyenidogan/AdvData/main/Project1/\"\n",
-    "file_name=\"ecommerce_shipping.csv\"\n",
-    "file_url=folder+file_name\n",
-    "\n",
-    "\n",
-    "def load_shipping_data(path=file_url): \n",
-    "    return pd.read_csv(path)\n",
-    "\n",
-    "shipping = pd.read_csv(file_url,error_bad_lines=False)\n",
-    "\n",
     "shipping.head()"
    ]
   },
@@ -191,27 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(shipping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +203,7 @@
        "(10999, 12)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +406,7 @@
        "max          10.000000         65.000000    7846.000000          1.000000  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,39 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3    2239\n",
-       "1    2235\n",
-       "4    2189\n",
-       "5    2171\n",
-       "2    2165\n",
-       "Name: Customer_rating, dtype: int64"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "shipping['Customer_rating'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +599,7 @@
        "medium               NaN  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,34 +620,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 10999 entries, 0 to 10998\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column              Non-Null Count  Dtype \n",
-      "---  ------              --------------  ----- \n",
-      " 0   Warehouse_block     10999 non-null  object\n",
-      " 1   Mode_of_Shipment    10999 non-null  object\n",
-      " 2   Gender              10999 non-null  object\n",
-      " 3   Product_importance  10999 non-null  object\n",
-      " 4   ReachedonTime_YN    10999 non-null  object\n",
-      "dtypes: object(5)\n",
-      "memory usage: 429.8+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "shipping[categorical_features].info()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -705,28 +628,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
+   "execution_count": 110,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3    2239\n",
-       "1    2235\n",
-       "4    2189\n",
-       "5    2171\n",
-       "2    2165\n",
-       "Name: Customer_rating, dtype: int64"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ID Warehouse_block Mode_of_Shipment  Customer_care_calls  \\\n",
+      "0   1               D           Flight                    4   \n",
+      "1   2               F           Flight                    4   \n",
+      "2   3               A           Flight                    2   \n",
+      "3   4               B           Flight                    3   \n",
+      "4   5               C           Flight                    2   \n",
+      "\n",
+      "   Cost_of_the_Product  Prior_purchases Product_importance Gender  \\\n",
+      "0                  177                3                low      F   \n",
+      "1                  216                2                low      M   \n",
+      "2                  183                4                low      M   \n",
+      "3                  176                4             medium      M   \n",
+      "4                  184                3             medium      F   \n",
+      "\n",
+      "   Discount_offered  Weight_in_gms ReachedonTime_YN  \n",
+      "0                44           1233                1  \n",
+      "1                59           3088                1  \n",
+      "2                48           3374                1  \n",
+      "3                10           1177                1  \n",
+      "4                46           2484                1  \n"
+     ]
     }
    ],
    "source": [
-    "data_features = shipping.drop(\"Customer_rating\", axis=1)\n",
-    "shipping[\"Customer_rating\"].value_counts()"
+    "X = shipping.drop(\"Customer_rating\", axis=1)\n",
+    "print(X.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    2\n",
+      "1    5\n",
+      "2    2\n",
+      "3    3\n",
+      "4    2\n",
+      "Name: Customer_rating, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = shipping[\"Customer_rating\"]\n",
+    "print(y.head())"
    ]
   },
   {
@@ -739,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,8 +706,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# split dataframe and income\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    data_features, shipping[\"Customer_rating\"], random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)"
    ]
   },
   {
@@ -762,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 113,
    "metadata": {
     "scrolled": true
    },
@@ -1004,7 +962,7 @@
        "[8249 rows x 11 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 114,
    "metadata": {
     "scrolled": true
    },
@@ -1051,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 115,
    "metadata": {
     "scrolled": true
    },
@@ -1184,7 +1142,7 @@
        "max          10.000000         65.000000    7846.000000  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
