--- a/Project1/Project1_BernaYenidogan.ipynb
+++ b/Project1/Project1_BernaYenidogan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4                46           2484                 1  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "(10999, 12)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "max          10.000000         65.000000    7846.000000          1.000000  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "medium               NaN  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 123,
    "metadata": {
     "scrolled": true
    },
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 126,
    "metadata": {
     "scrolled": true
    },
@@ -962,7 +962,7 @@
        "[8249 rows x 11 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 148,
    "metadata": {
     "scrolled": true
    },
@@ -1399,10 +1399,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shipping['Weight_in_gms'].isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          ID Warehouse_block Mode_of_Shipment  Customer_care_calls  \\\n",
+      "0          1               D           Flight                    4   \n",
+      "1          2               F           Flight                    4   \n",
+      "2          3               A           Flight                    2   \n",
+      "3          4               B           Flight                    3   \n",
+      "4          5               C           Flight                    2   \n",
+      "...      ...             ...              ...                  ...   \n",
+      "10994  10995               A             Ship                    4   \n",
+      "10995  10996               B             Ship                    4   \n",
+      "10996  10997               C             Ship                    5   \n",
+      "10997  10998               F             Ship                    5   \n",
+      "10998  10999               D             Ship                    2   \n",
+      "\n",
+      "       Customer_rating  Cost_of_the_Product  Prior_purchases  \\\n",
+      "0                    2                  177                3   \n",
+      "1                    5                  216                2   \n",
+      "2                    2                  183                4   \n",
+      "3                    3                  176                4   \n",
+      "4                    2                  184                3   \n",
+      "...                ...                  ...              ...   \n",
+      "10994                1                  252                5   \n",
+      "10995                1                  232                5   \n",
+      "10996                4                  242                5   \n",
+      "10997                2                  223                6   \n",
+      "10998                5                  155                5   \n",
+      "\n",
+      "      Product_importance Gender  Discount_offered  Weight_in_gms  \\\n",
+      "0                    low      F                44           1233   \n",
+      "1                    low      M                59           3088   \n",
+      "2                    low      M                48           3374   \n",
+      "3                 medium      M                10           1177   \n",
+      "4                 medium      F                46           2484   \n",
+      "...                  ...    ...               ...            ...   \n",
+      "10994             medium      F                 1           1538   \n",
+      "10995             medium      F                 6           1247   \n",
+      "10996                low      F                 4           1155   \n",
+      "10997             medium      M                 2           1210   \n",
+      "10998                low      F                 6           1639   \n",
+      "\n",
+      "       ReachedonTime_YN  \n",
+      "0                     1  \n",
+      "1                     1  \n",
+      "2                     1  \n",
+      "3                     1  \n",
+      "4                     1  \n",
+      "...                 ...  \n",
+      "10994                 1  \n",
+      "10995                 0  \n",
+      "10996                 0  \n",
+      "10997                 0  \n",
+      "10998                 0  \n",
+      "\n",
+      "[10999 rows x 12 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shipping)"
+   ]
   },
   {
    "cell_type": "markdown",
