--- a/Project1/Project1_BernaYenidogan.ipynb
+++ b/Project1/Project1_BernaYenidogan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "      <td>low</td>\n",
        "      <td>F</td>\n",
        "      <td>44</td>\n",
-       "      <td>1233</td>\n",
+       "      <td>1233.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -101,7 +101,7 @@
        "      <td>low</td>\n",
        "      <td>M</td>\n",
        "      <td>59</td>\n",
-       "      <td>3088</td>\n",
+       "      <td>3088.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -116,7 +116,7 @@
        "      <td>low</td>\n",
        "      <td>M</td>\n",
        "      <td>48</td>\n",
-       "      <td>3374</td>\n",
+       "      <td>3374.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -131,7 +131,7 @@
        "      <td>medium</td>\n",
        "      <td>M</td>\n",
        "      <td>10</td>\n",
-       "      <td>1177</td>\n",
+       "      <td>1177.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -146,7 +146,7 @@
        "      <td>medium</td>\n",
        "      <td>F</td>\n",
        "      <td>46</td>\n",
-       "      <td>2484</td>\n",
+       "      <td>2484.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -169,14 +169,14 @@
        "4                  184                3             medium      F   \n",
        "\n",
        "   Discount_offered  Weight_in_gms  ReachedonTime_YN  \n",
-       "0                44           1233                 1  \n",
-       "1                59           3088                 1  \n",
-       "2                48           3374                 1  \n",
-       "3                10           1177                 1  \n",
-       "4                46           2484                 1  "
+       "0                44         1233.0                 1  \n",
+       "1                59         3088.0                 1  \n",
+       "2                48         3374.0                 1  \n",
+       "3                10         1177.0                 1  \n",
+       "4                46         2484.0                 1  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "(10999, 12)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -232,21 +232,21 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 10999 entries, 0 to 10998\n",
       "Data columns (total 12 columns):\n",
-      " #   Column               Non-Null Count  Dtype \n",
-      "---  ------               --------------  ----- \n",
-      " 0   ID                   10999 non-null  int64 \n",
-      " 1   Warehouse_block      10999 non-null  object\n",
-      " 2   Mode_of_Shipment     10999 non-null  object\n",
-      " 3   Customer_care_calls  10999 non-null  int64 \n",
-      " 4   Customer_rating      10999 non-null  int64 \n",
-      " 5   Cost_of_the_Product  10999 non-null  int64 \n",
-      " 6   Prior_purchases      10999 non-null  int64 \n",
-      " 7   Product_importance   10999 non-null  object\n",
-      " 8   Gender               10999 non-null  object\n",
-      " 9   Discount_offered     10999 non-null  int64 \n",
-      " 10  Weight_in_gms        10999 non-null  int64 \n",
-      " 11  ReachedonTime_YN     10999 non-null  int64 \n",
-      "dtypes: int64(8), object(4)\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   ID                   10999 non-null  int64  \n",
+      " 1   Warehouse_block      10999 non-null  object \n",
+      " 2   Mode_of_Shipment     10999 non-null  object \n",
+      " 3   Customer_care_calls  10999 non-null  int64  \n",
+      " 4   Customer_rating      10999 non-null  int64  \n",
+      " 5   Cost_of_the_Product  10999 non-null  int64  \n",
+      " 6   Prior_purchases      10999 non-null  int64  \n",
+      " 7   Product_importance   10999 non-null  object \n",
+      " 8   Gender               10999 non-null  object \n",
+      " 9   Discount_offered     10999 non-null  int64  \n",
+      " 10  Weight_in_gms        9898 non-null   float64\n",
+      " 11  ReachedonTime_YN     10999 non-null  int64  \n",
+      "dtypes: float64(1), int64(7), object(4)\n",
       "memory usage: 1.0+ MB\n"
      ]
     }
