--- a/Project2/Project2_BernaYenidogan.ipynb
+++ b/Project2/Project2_BernaYenidogan.ipynb
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -826,6 +826,7 @@
     }
    ],
    "source": [
+    "# Scaling numeric variables and one-hot encoding the categorical variables\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
@@ -843,9 +844,41 @@
     "        ('num', numeric_transformer, numeric_features),\n",
     "        ('cat', categorical_transformer, categorical_features)])\n",
     "     \n",
-    "X_train_encoded_resuts = preprocessor.fit_transform(X_train)\n",
+    "X_train_encoded = preprocessor.fit_transform(X_train)\n",
     "\n",
-    "print(X_train_encoded_resuts)\n"
+    "print(X_train_encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.92294452 -1.22475697 -0.39423768 ...  1.          0.\n",
+      "   1.        ]\n",
+      " [ 0.85039866  0.75798683  0.88123716 ...  1.          1.\n",
+      "   0.        ]\n",
+      " [-0.92294452 -0.8490792   4.06992427 ...  1.          1.\n",
+      "   0.        ]\n",
+      " ...\n",
+      " [-0.92294452  0.7997288  -1.0319751  ...  0.          1.\n",
+      "   0.        ]\n",
+      " [-0.92294452 -1.43346685 -1.0319751  ...  1.          1.\n",
+      "   0.        ]\n",
+      " [-0.92294452  0.36143807 -0.39423768 ...  1.          0.\n",
+      "   1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Repeating the same transformation for the test dataset\n",
+    "X_test_encoded = preprocessor.fit_transform(X_test)\n",
+    "\n",
+    "print(X_test_encoded)"
    ]
   },
   {
@@ -854,9 +887,7 @@
    "source": [
     "## Step 3: Examining the target attribute. \n",
     "\n",
-    "Examining the attribute you are going to predict.\n",
-    "\n",
-    "Plotting the distribution of the target attribute in the dataset (e.g., is it Gaussian, uniform, logarithmic). This will help in interpreting the performance of different algorithms on your data."
+    "Examining and plotting the distribution of the target attribute in the dataset. The target variable here is a binary class, so the counts of the classes are displayed."
    ]
   },
   {
@@ -926,7 +957,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4.1: KNN with the default parameters"
+    "### Step 4.1: KNN with cross validation \n",
+    "Calculating precision, recall, and F1 for the training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cv_scores:\n",
+      "[0.63409091 0.64488636 0.63181818 0.62727273 0.62876634]\n",
+      "cv_scores mean:\n",
+      "0.633366905266422\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://towardsdatascience.com/building-a-k-nearest-neighbors-k-nn-model-with-scikit-learn-51209555453a\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "\n",
+    "knn= KNeighborsClassifier(n_neighbors=5)\n",
+    "\n",
+    "#5-fold cross validation\n",
+    "cv_scores = cross_val_score(knn, X_train_encoded, y_train, cv=5)\n",
+    "\n",
+    "print(\"cv_scores:\\n{}\".format(cv_scores))\n",
+    "print(\"cv_scores mean:\\n{}\".format(np.mean(cv_scores)))"
    ]
   },
   {
@@ -934,56 +997,118 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Evaluating the model for the "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 256,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[543 344]\n",
+      " [440 873]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Predicting the y_test and displaying the confusion matrix\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "y_pred = cross_val_predict(knn, X_test_encoded, y_test, cv=5)\n",
+    "\n",
+    "conf_mat = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "print(conf_mat)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 257,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     class 1       0.55      0.61      0.58       887\n",
+      "     class 2       0.72      0.66      0.69      1313\n",
+      "\n",
+      "    accuracy                           0.64      2200\n",
+      "   macro avg       0.63      0.64      0.64      2200\n",
+      "weighted avg       0.65      0.64      0.65      2200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calcuating the metrics\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(y_test, y_pred,\n",
+    "                            target_names=[\"class 1\", \"class 2\"]))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4.2: RandomForestClassifier with the default parameters"
+    "### Step 4.2: RandomForestClassifier with the default parameters\n",
+    "Calculating precision, recall, and F1 for the training data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on training set: 0.960\n",
+      "Accuracy on test set: 0.660\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "forest = RandomForestClassifier(n_estimators=5, random_state=2)\n",
+    "forest.fit(X_train_encoded, y_train)\n",
+    "\n",
+    "print(\"Accuracy on training set: {:.3f}\".format(forest.score(X_train_encoded, y_train)))\n",
+    "print(\"Accuracy on test set: {:.3f}\".format(forest.score(X_test_encoded, y_test)))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.06070354 0.16791111 0.05309887 0.22740434 0.26284095 0.05711109\n",
+      " 0.03877118 0.01829755 0.01604687 0.01445148 0.01387694 0.01639159\n",
+      " 0.00943396 0.00805642 0.01500989 0.01057966 0.01001456]\n"
+     ]
+    }
+   ],
+   "source": [
+    "importances = forest.feature_importances_\n",
+    "print(importances)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1042,9 +1167,7 @@
     "#https://scikit-learn.org/stable/auto_examples/model_selection/plot_multi_metric_evaluation.html\n",
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "knn=KNeighborsClassifier()\n",
     "param_grid = {\"n_neighbors\": np.arange(1, 26)}\n",
     "\n",
     "metric_grid= {'acc': 'accuracy','prec':'precision','rec':'recall', 'f1':  'f1'}\n",
@@ -1063,7 +1186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The values of the scores for the n_neighbors=3 are as below:"
+    "The values of the scores for the n_neighbors=3 are as below (note that n_neighbors=3 corresponds to index=2 of the arrays:"
    ]
   },
   {
