--- a/Project2/Project2_BernaYenidogan.ipynb
+++ b/Project2/Project2_BernaYenidogan.ipynb
@@ -993,12 +993,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Evaluating the model for the "
+    "Evaluating the model for the test data and generating the confusion matrix:"
    ]
   },
   {
@@ -1028,8 +1026,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculating the metrics for the KNN prediction:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -1038,22 +1043,33 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     class 1       0.55      0.61      0.58       887\n",
-      "     class 2       0.72      0.66      0.69      1313\n",
+      "           0       0.55      0.61      0.58       887\n",
+      "           1       0.72      0.66      0.69      1313\n",
       "\n",
       "    accuracy                           0.64      2200\n",
       "   macro avg       0.63      0.64      0.64      2200\n",
       "weighted avg       0.65      0.64      0.65      2200\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.6385327198056724"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Calcuating the metrics\n",
     "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "print(classification_report(y_test, y_pred,\n",
-    "                            target_names=[\"class 1\", \"class 2\"]))"
+    "print(classification_report(y_test, y_pred))\n",
+    "roc_auc_score(y_test, y_pred)"
    ]
   },
   {
@@ -1061,19 +1077,19 @@
    "metadata": {},
    "source": [
     "### Step 4.2: RandomForestClassifier with the default parameters\n",
-    "Calculating precision, recall, and F1 for the training data"
+    "Calculating accuracy for the training & test data using the default settings of Random Forrest Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on training set: 0.960\n",
+      "Accuracy on training set: 1.000\n",
       "Accuracy on test set: 0.660\n"
      ]
     }
@@ -1083,7 +1099,7 @@
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "forest = RandomForestClassifier(n_estimators=5, random_state=2)\n",
+    "forest = RandomForestClassifier(random_state=2)\n",
     "forest.fit(X_train_encoded, y_train)\n",
     "\n",
     "print(\"Accuracy on training set: {:.3f}\".format(forest.score(X_train_encoded, y_train)))\n",
@@ -1092,44 +1108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.06070354 0.16791111 0.05309887 0.22740434 0.26284095 0.05711109\n",
-      " 0.03877118 0.01829755 0.01604687 0.01445148 0.01387694 0.01639159\n",
-      " 0.00943396 0.00805642 0.01500989 0.01057966 0.01001456]\n"
+      "100\n"
      ]
     }
    ],
    "source": [
-    "importances = forest.feature_importances_\n",
-    "print(importances)"
+    "#default value of n_estimators parameter\n",
+    "print(forest.n_estimators)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1148,6 +1141,47 @@
     "\n",
     "Using 4 different metrics (accuracy, precision, recall, F1) but optimizing for the F1 score"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#List Hyperparameters that we want to tune.\n",
+    "hyperparameters = {\"leaf_size\":np.arange(1, 50), \"n_neighbors\":np.arange(1, 30), \"p\":[1,2]}\n",
+    "#Create new KNN object\n",
+    "knn_2 = KNeighborsClassifier()\n",
+    "#Use GridSearch\n",
+    "clf = GridSearchCV(knn_2, hyperparameters, cv=10)\n",
+    "#Fit the model\n",
+    "best_model = clf.fit(X_train_encoded, y_train)\n",
+    "#Print The value of best Hyperparameters\n",
+    "print('Best leaf_size:', best_model.best_estimator_.get_params()['leaf_size'])\n",
+    "print('Best p:', best_model.best_estimator_.get_params()['p'])\n",
+    "print('Best n_neighbors:', best_model.best_estimator_.get_params()['n_neighbors'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
