--- a/Project3/Project3_BernaYenidogan.ipynb
+++ b/Project3/Project3_BernaYenidogan.ipynb
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "metadata": {
     "scrolled": true
    },
@@ -1172,7 +1172,7 @@
        "Text(0, 0.5, 'Second principal component')"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1191,8 +1191,7 @@
    ],
    "source": [
     "# keep the first two principal components of the data\n",
-    "#pca2 = PCA(n_components=0.95)\n",
-    "pca2 = PCA(0.95)\n",
+    "pca2 = PCA(n_components=0.95)\n",
     "# fit PCA model to data\n",
     "pca2.fit(X_scaled)\n",
     "\n",
@@ -1210,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1218,7 @@
        "Text(0, 0.5, 'Principal components')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1255,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1281,6 +1280,66 @@
    "source": [
     "This score is definitely better than the best performing score previously obtained using the same model with the same parameters without PCA."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------Explained variance ratio--------------------\n",
+      "[1.11425830e-01 1.07564794e-01 1.00455138e-01 9.02480619e-02\n",
+      " 7.79495718e-02 6.72683500e-02 6.66318139e-02 6.65265256e-02\n",
+      " 6.57119474e-02 5.71461357e-02 5.48218353e-02 4.88639050e-02\n",
+      " 3.73683712e-02 2.65052768e-02 2.15124433e-02 9.33283967e-33\n",
+      " 7.80508279e-33 4.04885920e-33]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keep all the principal components of the data\n",
+    "pca3 = PCA()\n",
+    "# fit PCA model to data\n",
+    "pca3.fit(X_scaled)\n",
+    "print('-'*20 + 'Explained variance ratio' + '-'*20)\n",
+    "print(pca3.explained_variance_ratio_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------Explained variance ratio--------------------\n",
+      "[0.11142583 0.10756479 0.10045514 0.09024806 0.07794957 0.06726835\n",
+      " 0.06663181 0.06652653 0.06571195 0.05714614 0.05482184 0.04886391\n",
+      " 0.03736837]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keep the first two principal components of the data\n",
+    "pca4 = PCA(n_components=0.95)\n",
+    "# fit PCA model to data\n",
+    "pca4.fit(X_scaled)\n",
+    "\n",
+    "print('-'*20 + 'Explained variance ratio' + '-'*20)\n",
+    "print(pca4.explained_variance_ratio_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
